--- a/pages/index.css
+++ b/pages/index.css
@@ -5,15 +5,35 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
+
 @import url(../blocks/user-info/user-info.css);
 @import url(../blocks/user-info/__edit/user-info__edit.css);
+@import url(../blocks/user-info/__photo/user-info__photo.css);
+@import url(../blocks/user-info/__data/user-info__data.css);
+@import url(../blocks/user-info/__name/user-info__name.css);
+@import url(../blocks/user-info/__job/user-info__job.css);
+@import url(../blocks/user-info/__button/user-info__button.css);
+
+
+
+
 @import url(../blocks/button/button.css);
 @import url(../blocks/places-list/places-list.css);
 @import url(../blocks/place-card/place-card.css);
+@import url(../blocks/place-card/__image/place-card__image.css);
+@import url(../blocks/place-card/__description/place-card__description.css);
+@import url(../blocks/place-card/__name/place-card__name.css);
+
+
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup_edit-profile/popup_edit-profile.css);
 @import url(../blocks/popup_edit-profile/__button/popup_edit-profile__button.css);
+@import url(../blocks/popup_edit-profile/__content/popup_edit-profile__content.css);
+@import url(../blocks/popup_edit-profile/__close/popup_edit-profile__close.css);
+@import url(../blocks/popup_edit-profile/__title/popup_edit-profile__title.css);
+@import url(../blocks/popup_edit-profile/__form/popup_edit-profile__form.css);
+@import url(../blocks/popup_edit-profile/__input/popup_edit-profile__input.css);
 @import url(../blocks/popup_edit-profile/_state/popup_edit-profile_state_disabled.css);
 @import url(../blocks/place-card/__like-icon/place-card__like-icon.css);
 
