--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,7 +1,17 @@
 .profile {
-
-    min-height: 300px;
+    width: 100%;
+    min-height: 120px;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+    margin-top: 20px;
+    margin-bottom: 51px;
+}
 
+@media screen and (max-width: 1050px) {
+    .profile {
+        margin-top: 0;
+        margin-bottom: 0;
+
+    }
 }
