--- a/blocks/user-info/__data/user-info__data.css
+++ b/blocks/user-info/__data/user-info__data.css
@@ -1,11 +1,17 @@
 .user-info__data {
-    max-width: 364px;
+    width: 336px;
     margin-left: 36px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-right:auto;
+    align-self: center;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1050px) {
     .user-info__data {
-        margin: 20px 0;
+        width: 282px;
+        margin: 20px 0 36px ;
         text-align: center;
+        justify-content: center;
     }
 }
