--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,3 +4,11 @@
     font-size: 18px;
     line-height: 22px;
 }
+
+@media screen and (max-width: 1050px) {
+    .footer__copyright {
+        font-size: 14px;
+        line-height: 17px;
+        margin-left: 19px;
+    }
+}
