--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,12 @@
 .header {
-
-    margin-top: 45px;
-    min-height: 74px;
+    min-height: 119px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
+@media screen and (max-width: 1050px) {
+    .header {
+        min-height: 84px;
+    }
+}
