--- a/blocks/popup-edit-profile/__button/popup-edit-profile__button.css
+++ b/blocks/popup-edit-profile/__button/popup-edit-profile__button.css
@@ -1,7 +1,6 @@
 .popup-edit-profile__button {
     width: 100%;
     height: 50px;
-    border: 1px solid rgba(0, 0, 0, .2);
     margin-top: 48px;
     color: #ffffff;
     font-size: 18px;
@@ -10,6 +9,13 @@
     background: #000000;
     border-radius: 2px;
     transition: opacity linear .3s;
+
+}
+@media screen and (max-width: 1050px) {
+    .popup-edit-profile__button {
+        font-size: 14px;
+        line-height: 17px;
+    }
 }
 
 .popup-edit-profile__button:disabled {
