--- a/blocks/popup-edit-profile/__content/popup-edit-profile__content.css
+++ b/blocks/popup-edit-profile/__content/popup-edit-profile__content.css
@@ -6,6 +6,7 @@
     position: relative;
     box-sizing: border-box;
     padding: 34px 36px;
+    box-shadow: 0 0 25px rgba(255, 255, 255, .15);
 }
 
 @media screen and (max-width: 540px) {
