--- a/blocks/popup-edit-profile/__form/popup-edit-profile__form.css
+++ b/blocks/popup-edit-profile/__form/popup-edit-profile__form.css
@@ -1,3 +1,8 @@
 .popup-edit-profile__form {
     margin-top: 54px;
 }
+@media screen and (max-width: 1050px) {
+    .popup-edit-profile__form {
+        margin-top: 75px;
+    }
+}
