--- a/blocks/popup-edit-profile/__input/popup-edit-profile__input.css
+++ b/blocks/popup-edit-profile/__input/popup-edit-profile__input.css
@@ -10,6 +10,14 @@
     margin-bottom: 24px;
 }
 
+@media screen and (max-width: 1050px) {
+    .popup-edit-profile__input {
+        font-size: 14px;
+        line-height: 17px;
+        margin-bottom: 30px;
+        height: 37px;
+    }
+}
 .popup-edit-profile__input:last-of-type {
     margin-bottom: 0;
 }
