--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,10 +1,14 @@
 
 .root {
+    width: 100%;
+    max-width: 880px;
     min-height: 100vh;
     font-family: 'Inter-Regular', serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     margin: 0;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
