--- a/blocks/user-info/__job/user-info__job.css
+++ b/blocks/user-info/__job/user-info__job.css
@@ -1,6 +1,17 @@
 .user-info__job {
-    margin: 20px 0 0 0;
+    margin: 16px 0 0 0;
     font-family: 'Inter-Regular', serif;
     font-size: 18px;
     line-height: 22px;
+    width: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 1050px) {
+    .user-info__job {
+        font-size: 14px;
+        line-height: 17px;
+    }
 }
