--- a/blocks/user-info/__name/user-info__name.css
+++ b/blocks/user-info/__name/user-info__name.css
@@ -4,4 +4,17 @@
     font-weight: normal;
     font-size: 42px;
     line-height: 48px;
+    width: 294px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+
+@media screen and (max-width: 1050px) {
+    .user-info__name {
+        width: 189px;
+        font-size: 27px;
+        line-height: 33px;
+    }
 }
