--- a/blocks/user-info/__name/user-info__name.css
+++ b/blocks/user-info/__name/user-info__name.css
@@ -13,6 +13,7 @@
 
 @media screen and (max-width: 1050px) {
     .user-info__name {
+        margin-left: 28px;
         width: 189px;
         font-size: 27px;
         line-height: 33px;
