--- a/blocks/popup-edit-profile/__close/popup-edit-profile__close.css
+++ b/blocks/popup-edit-profile/__close/popup-edit-profile__close.css
@@ -1,10 +1,10 @@
 .popup-edit-profile__close {
     width: 32px;
     height: 32px;
-    background-color: black;
+    background-color: transparent;
     background-image: url("../../../images/close.svg");
     background-size: cover;
-
+    border: none;
     position: absolute;
     top: -40px;
     right: -40px;
@@ -14,7 +14,8 @@
 
 @media screen and (max-width: 540px) {
     .popup-edit-profile__close {
-        top: -48px;
+        background-color: transparent;
+        top: -36px;
         right: 0;
         width: 20px;
         height: 20px;
