--- a/blocks/popup-edit-profile/__content/popup-edit-profile__content.css
+++ b/blocks/popup-edit-profile/__content/popup-edit-profile__content.css
@@ -1,16 +1,20 @@
 .popup-edit-profile__content {
+    margin: 0;
     width: 430px;
-    min-height: 330px;
+    height: 330px;
     background-color: #fff;
     border-radius: 10px;
     position: relative;
     box-sizing: border-box;
     padding: 34px 36px;
     box-shadow: 0 0 25px rgba(255, 255, 255, .15);
+
 }
 
 @media screen and (max-width: 540px) {
     .popup-edit-profile__content {
         width: calc(100% - 38px);
+        padding: 25px 22px;
+        height: 322px;
     }
 }
