--- a/blocks/popup-edit-profile/__input/popup-edit-profile__input.css
+++ b/blocks/popup-edit-profile/__input/popup-edit-profile__input.css
@@ -1,22 +1,26 @@
 .popup-edit-profile__input {
     width: 100%;
-    height: 47px;
+    height: 32px;
     border: 0;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     font-size: 14px;
     line-height: 17px;
     box-sizing: border-box;
-    padding: 5px 6px 13px;
-    margin-bottom: 24px;
+    padding: 0;
+    margin: 0 0 25px;
+
+    font-family: 'Inter-Regular', serif;
 }
 
 @media screen and (max-width: 1050px) {
     .popup-edit-profile__input {
         font-size: 14px;
         line-height: 17px;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         height: 37px;
     }
+
+
 }
 .popup-edit-profile__input:last-of-type {
     margin-bottom: 0;
