--- a/blocks/user-info/__edit/user-info__edit.css
+++ b/blocks/user-info/__edit/user-info__edit.css
@@ -7,7 +7,7 @@
     color:white;
     width: 24px;
     height: 24px;
-    margin-top: 16px;
+    margin-top: 14px;
     margin-left: 18px;
     transition: opacity linear .3s;
 
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 1050px) {
     .user-info__edit {
-        margin: 0 0 0 10px;
+        margin: 8px 0 0 10px;
         width: 18px;
         height: 18px;
         background-size: 8px 8px;
