--- a/pages/index.css
+++ b/pages/index.css
@@ -16,25 +16,37 @@
 @import url(../blocks/user-info/__button/user-info__button.css);
 
 
-
-
-
 @import url(../blocks/places-list/places-list.css);
 @import url(../blocks/place-card/place-card.css);
 @import url(../blocks/place-card/__image/place-card__image.css);
 @import url(../blocks/place-card/__description/place-card__description.css);
 @import url(../blocks/place-card/__name/place-card__name.css);
+@import url(../blocks/place-card/__delete-icon/place-card__delete-icon.css);
+@import url(../blocks/place-card/__like-icon/place-card__like-icon.css);
+@import url(../blocks/place-card/__like-icon/_activated/place-card__like-icon_activated.css);
 
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
+@import url(../blocks/popup-image/__content/popup-image__content.css);
+@import url(../blocks/popup-image/__name/popup-image__name.css);
+@import url(../blocks/popup-image/__img/popup-image__img.css);
+@import url(../blocks/popup-image/popup-image.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_disabled/popup_disabled.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__content/popup__content.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__input/popup__input.css);
+
+
+
+
 @import url(../blocks/popup-edit-profile/popup-edit-profile.css);
-@import url(../blocks/popup-edit-profile/__button/popup-edit-profile__button.css);
-@import url(../blocks/popup-edit-profile/__content/popup-edit-profile__content.css);
-@import url(../blocks/popup-edit-profile/__close/popup-edit-profile__close.css);
-@import url(../blocks/popup-edit-profile/__title/popup-edit-profile__title.css);
-@import url(../blocks/popup-edit-profile/__form/popup-edit-profile__form.css);
-@import url(../blocks/popup-edit-profile/__input/popup-edit-profile__input.css);
-@import url(../blocks/popup-edit-profile/_disabled/popup-edit-profile_disabled.css);
-@import url(../blocks/place-card/__like-icon/place-card__like-icon.css);
+
+
 
