--- a/blocks/place-card/__image/place-card__image.css
+++ b/blocks/place-card/__image/place-card__image.css
@@ -6,6 +6,7 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     position: relative;
+    cursor: pointer;
 }
 
 .place-card__image::after {
