--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,4 +1,4 @@
-.popup-edit-profile__content {
+.popup__content {
     margin: 0;
     width: 430px;
     height: 330px;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 540px) {
-    .popup-edit-profile__content {
+    .popup__content {
         width: calc(100% - 38px);
         padding: 25px 22px;
         height: 322px;
