--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup-edit-profile__input {
+.popup__input {
     width: 100%;
     height: 32px;
     border: 0;
@@ -13,7 +13,7 @@
 }
 
 @media screen and (max-width: 1050px) {
-    .popup-edit-profile__input {
+    .popup__input {
         font-size: 14px;
         line-height: 17px;
         margin-bottom: 20px;
@@ -22,6 +22,6 @@
 
 
 }
-.popup-edit-profile__input:last-of-type {
+.popup__input:last-of-type {
     margin-bottom: 0;
 }
