--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.popup-edit-profile__title {
+.popup__title {
     margin: 0;
     font-size: 24px;
     font-family: 'Inter-Black', serif;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 1050px) {
-    .popup-edit-profile__title {
+    .popup__title {
         font-size: 18px;
         line-height: 22px;
 
