--- a/blocks/place-card/__like-icon/_activated/place-card__like-icon_activated.css
+++ b/blocks/place-card/__like-icon/_activated/place-card__like-icon_activated.css
@@ -1,3 +1,3 @@
 .place-card__like-icon_activated{
-    background: url(../../../../images/like_active.svg)
+    background: url(../../../../images/like_active.svg);
 }
