--- a/blocks/popup-image/__img/popup-image__img.css
+++ b/blocks/popup-image/__img/popup-image__img.css
@@ -2,15 +2,14 @@
     display: block;
     max-width: 75vw;
     max-height: 75vw;
+    /* на stackoverflow писали, что с рендером качество картинок станет чуть лучше, но разницы осоюо не заметил*/
     image-rendering: -moz-crisp-edges; /* Firefox */
     -ms-interpolation-mode: nearest-neighbor;  /* IE */
-    image-rendering: crisp-edges;
-
 }
 
 @media screen and (max-width: 320px) {
     .popup-image__img {
-        width:240px ;
+        width:240px;
         height: auto;
     }
 }
