--- a/blocks/place-card/__delete-icon/place-card__delete-icon.css
+++ b/blocks/place-card/__delete-icon/place-card__delete-icon.css
@@ -3,6 +3,7 @@
     height: 19px;
     background-color: transparent;
     background-image: url("../../../images/icon-delete.svg");
+    background-repeat: no-repeat;
     border: 0;
     position: absolute;
     top: 20px;
