--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,7 +1,7 @@
 .popup__button {
     width: 100%;
     height: 50px;
-    margin-top: 48px;
+
     color: #ffffff;
     font-size: 18px;
     line-height: 22px;
@@ -10,7 +10,8 @@
     border-radius: 2px;
     border: none;
     transition: opacity linear .3s;
-
+    position: absolute;
+    bottom: 0;
 }
 @media screen and (max-width: 1050px) {
     .popup__button {
