--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,12 +1,13 @@
 .popup__title {
-    margin: 0;
     font-size: 24px;
     font-family: 'Inter-Black', serif;
     line-height: 29px;
+    margin: 34px 0 0;
 }
 
 @media screen and (max-width: 1050px) {
     .popup__title {
+        margin-top: 35px;
         font-size: 18px;
         line-height: 22px;
 
