--- a/pages/index.css
+++ b/pages/index.css
@@ -15,7 +15,6 @@
 @import url(../blocks/user-info/__job/user-info__job.css);
 @import url(../blocks/user-info/__button/user-info__button.css);
 
-
 @import url(../blocks/places-list/places-list.css);
 @import url(../blocks/place-card/place-card.css);
 @import url(../blocks/place-card/__image/place-card__image.css);
@@ -25,14 +24,12 @@
 @import url(../blocks/place-card/__like-icon/place-card__like-icon.css);
 @import url(../blocks/place-card/__like-icon/_activated/place-card__like-icon_activated.css);
 
-
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
 @import url(../blocks/popup-image/__content/popup-image__content.css);
 @import url(../blocks/popup-image/__name/popup-image__name.css);
 @import url(../blocks/popup-image/__img/popup-image__img.css);
-
 
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_disabled/popup_disabled.css);
@@ -42,12 +39,9 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup-image/popup-image.css);
 
 
-
-
 @import url(../blocks/popup-edit-profile/popup-edit-profile.css);
-
-
-
