--- a/main.css
+++ b/main.css
@@ -58,6 +58,10 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/user-info/__button/user-info__button.css ***!
   \*****************************************************************************************************************************************************************************/
 .user-info__button{align-self:center;background-image:url(images/new_tab.19991305504560943ce1.svg);background-position:50%;background-repeat:no-repeat;background-size:22px 22px;border:2px solid #fff;border-radius:2px;font-size:30px;height:50px;margin-left:auto;transition:opacity .3s linear;width:150px}.user-info__button:hover{opacity:60%}@media screen and (max-width:1050px){.user-info__button{background-size:16px 16px;margin-bottom:36px;margin-left:0;position:static;width:282px}}
+/*!*****************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/user-info/__photo-button/user-info__photo-button.css ***!
+  \*****************************************************************************************************************************************************************************************/
+.user-info__photo-button{background:transparent;background-position:50%;background-repeat:no-repeat;background-size:26px 26px;border:none;border-radius:50%;cursor:pointer;height:120px;transition:.5s;width:120px}.user-info__photo-button:hover{background-color:rgba(0,0,0,.8);background-image:url(images/pen.a086f758840ae814ecde.svg)}
 /*!****************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/places-list/places-list.css ***!
   \****************************************************************************************************************************************************************/
@@ -82,6 +86,14 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/place-card/__delete-icon/place-card__delete-icon.css ***!
   \*****************************************************************************************************************************************************************************************/
 .place-card__delete-icon{background-color:transparent;background-image:url(images/icon-delete.823b0cf1b0b7e9cb7cad.svg);background-repeat:no-repeat;border:0;height:19px;position:absolute;right:20px;top:20px;transition:opacity .3s linear;width:18px}.place-card__delete-icon:hover{opacity:60%}
+/*!***********************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/place-card/__like-box/place-card__like-box.css ***!
+  \***********************************************************************************************************************************************************************************/
+.place-card__like-box{border:none;display:flex;flex-direction:column;justify-content:space-between;min-height:35px;min-width:22px}
+/*!*******************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/place-card/__like-counter/place-card__like-counter.css ***!
+  \*******************************************************************************************************************************************************************************************/
+.place-card__like-counter{font-family:Inter-Regular,serif;font-size:13px;line-height:16px;margin:3px 0 0;text-align:center;width:100%}
 /*!*************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/place-card/__like-icon/place-card__like-icon.css ***!
   \*************************************************************************************************************************************************************************************/
@@ -125,7 +137,7 @@
 /*!*********************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__button/popup__button.css ***!
   \*********************************************************************************************************************************************************************/
-.popup__button{background:#000;border:none;border-radius:2px;bottom:0;color:#fff;font-family:Inter-Regular,serif;font-size:18px;height:50px;line-height:22px;position:absolute;transition:opacity .3s linear;width:100%}@media screen and (max-width:1050px){.popup__button{font-size:14px;height:46px;line-height:17px;margin-top:45px}}.popup__button:disabled{background-color:transparent;border:1px solid rgba(0,0,0,.2);color:rgba(0,0,0,.2);cursor:default}.popup__button:hover{opacity:80%}
+.popup__button{background:#000;border:none;border-radius:2px;color:#fff;font-family:Inter-Regular,serif;font-size:18px;height:50px;line-height:22px;transition:opacity .3s linear;width:100%}@media screen and (max-width:1050px){.popup__button{font-size:14px;height:46px;line-height:17px}}.popup__button:disabled{background-color:transparent;border:1px solid rgba(0,0,0,.2);color:rgba(0,0,0,.2);cursor:default}.popup__button:hover{opacity:80%}
 /*!***********************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__content/popup__content.css ***!
   \***********************************************************************************************************************************************************************/
@@ -137,7 +149,7 @@
 /*!*****************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__form/popup__form.css ***!
   \*****************************************************************************************************************************************************************/
-.popup__form{margin-top:54px;min-height:183px;position:relative}@media screen and (max-width:1050px){.popup__form{margin-top:65px}}
+.popup__form{display:flex;flex-direction:column;margin-top:54px;position:relative}@media screen and (max-width:1050px){.popup__form{margin-top:65px}}
 /*!*******************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__input/popup__input.css ***!
   \*******************************************************************************************************************************************************************/
@@ -154,6 +166,14 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup-image/popup-image.css ***!
   \****************************************************************************************************************************************************************/
 .popup-image{background-color:rgba(0,0,0,.9)}
+/*!*************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup-avatar/__content/popup-avatar__content.css ***!
+  \*************************************************************************************************************************************************************************************/
+.popup-avatar__content{height:272px;min-height:272px;min-width:430px}
+/*!*************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup-delete/__content/popup-delete__content.css ***!
+  \*************************************************************************************************************************************************************************************/
+.popup-delete__content{height:181px;min-height:181px;min-width:430px}
 /*!******************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup-edit-profile/popup-edit-profile.css ***!
   \******************************************************************************************************************************************************************************/
