--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -14,6 +14,7 @@
 @import url(../blocks/user-info/__name/user-info__name.css);
 @import url(../blocks/user-info/__job/user-info__job.css);
 @import url(../blocks/user-info/__button/user-info__button.css);
+@import url(../blocks/user-info/__photo-button/user-info__photo-button.css);
 
 @import url(../blocks/places-list/places-list.css);
 @import url(../blocks/place-card/place-card.css);
@@ -21,6 +22,8 @@
 @import url(../blocks/place-card/__description/place-card__description.css);
 @import url(../blocks/place-card/__name/place-card__name.css);
 @import url(../blocks/place-card/__delete-icon/place-card__delete-icon.css);
+@import url(../blocks/place-card/__like-box/place-card__like-box.css);
+@import url(../blocks/place-card/__like-counter/place-card__like-counter.css);
 @import url(../blocks/place-card/__like-icon/place-card__like-icon.css);
 @import url(../blocks/place-card/__like-icon/_activated/place-card__like-icon_activated.css);
 
@@ -42,6 +45,8 @@
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup-image/popup-image.css);
+@import url(../blocks/popup-avatar/__content/popup-avatar__content.css);
+@import url(../blocks/popup-delete/__content/popup-delete__content.css);
 
 
 @import url(../blocks/popup-edit-profile/popup-edit-profile.css);
